<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="sort_by_rating">مرتب سازی بر اساس امتیاز</string>
    <string name="sort_by_distance">مرتب سازی براساس فاصله</string>
    <string name="sort">مرتب سازی</string>
    <string name="action_sorting">مرتب کن</string>
    
    <string name="more">نمایش بیشتر</string>
    <string name="less">پنهان‌سازی</string>
    <string name="minute">دقیقه</string>
    <string name="day">روز</string>
    <string name="toman">تومان</string>
    <string name="waiting_time">زمان انتظار در مطب</string>
    <string name="day_until_appointment">تعداد روز تا وقت ویزیت</string>
    <string name="visiting_fee">هزینه‌ی ویزیت</string>
    <string name="direction">مسیریابی</string>
    <string name="home">خانه</string>
     <string name="favorites">علاقه‌مندی‌ها</string>
    <string name="current_location">محل فعلی من</string>
    <string name="find">بگرد</string>
    <string name="all">همه</string>
    <string name="vicinity_of">حوالی</string>
    <string name="less_than_2.5km">2.5 km</string>
    <string name="less_than_5km">5 km</string>
    <string name="less_than_10km">10 km</string>
    <string name="less_than_20km">20 km</string>
    <string name="distance_from_me">فاصله</string>
	<string name="Score">امتیاز</string>
	<string name="show_on_map">مشاهده برروی نقشه</string>
	<string name="show_as_list">مشاهده به صورت لیست</string>
	<string name="action_refresh">دریافت دوباره</string>
    <string name="action_search">جست و جو</string>
    <string name="search_hint">جست و جوی دکتر</string>
    <string name="dialog_location_not_found">برنامه قادر به تعیین مشخصات جغرافیایی نیست، لطفا در تنظیمات مشخصات جغرافیایی را فعال کنید </string>
    <string name="dialog_location_not_found_geocoding">مکان مورد نظر شما پیدا نشد </string>
    <string name="lat_tehran">35.6980799999999974</string>
    <string name="lng_tehran">51.4050659999999979</string>
    <string name="ok">تایید</string>
    <string name="filter">فیلتر</string>
    <string name="cancel">بی خیال</string>
    <string name="app_name">طبیب یاب</string>
    <string name="add_clinic_activity">افزودن مرکز درمانی</string>
    <string name="action_settings">تنظیمات</string>
    <string name="hello_world">Hello world!</string>
    <string name="clinic_name">عنوان</string>
    <string name="dialog_confirm_add_clinic">مرکز درمانی جدید اضافه شود؟</string>
    <string name="clinic_type">نوع مرکز درمانی</string>
    <string name="clinic_speciality">تخصص</string>
    <string name="address">آدرس</string>
    <string name="select_location">ثبت دقیق مکان برروی نقشه</string>
    <string name="operating_hours">ساعات کاری</string>
    <string name="from">از</string>
    <string name="to">تا</string>
    <string name="insurances">بیمه‌های تحت قرارداد</string>
    <string-array name="clinic_types">
        <item>بیمارستان</item>
        <item>مطب</item>
        <item>کلینیک</item>
    </string-array>
    <string-array name="clinic_types_dialog_spinner">
        <item>همه</item>
        <item>بیمارستان</item>
        <item>مطب</item>
        <item>کلینیک</item>
    </string-array>
    
    <string-array name="speciality_level_types">
        <item>عمومی</item>
        <item>متخصص</item>
        <item>فوق تخصص</item>
        <item>سایر</item>
    </string-array>
    
    <string-array name="speciality_types_add_clinic">
        <item>     </item>
        <item>اعصاب و روان</item>
        <item>رادیولوژی</item>
        <item>زنان و زایمان</item>
        <item> گوش حلق و بيني</item>
        <item>جراحی عمومی</item>
        <item>کودکان</item>
        <item>گوارش</item>
        <item>ریه</item>
        <item> قلب و عروق</item>
        <item> داخلی</item>
        <item> چشم</item>
        <item> پوست</item>
        <item>ارتوپدي</item>
        <item>دندانپزشکی</item>
        <item>سایر</item>
    </string-array>
    
    
    <string-array name="speciality_types">
        <item>اعصاب و روان</item>
        <item>رادیولوژی</item>
        <item>زنان و زایمان</item>
        <item> گوش حلق و بيني</item>
        <item>جراحی عمومی</item>
        <item>کودکان</item>
        <item>گوارش</item>
        <item>ریه</item>
        <item> قلب و عروق</item>
        <item> داخلی</item>
        <item> چشم</item>
        <item> پوست</item>
        <item>ارتوپدي</item>
        <item>دندانپزشکی</item>
        <item>سایر</item>
    </string-array>
     
    <string-array name="speciality_level_types_search">
        <item>همه</item>
        <item>عمومی</item>
        <item>متخصص</item>
        <item>فوق تخصص</item>
        <item>سایر</item>
    </string-array>
    
    <string-array name="speciality_types_search">
        <item>همه</item>
        <item>اعصاب و روان</item>
        <item>رادیولوژی</item>
        <item>زنان و زایمان</item>
        <item> گوش حلق و بيني</item>
        <item>جراحی عمومی</item>
        <item>کودکان</item>
        <item>گوارش</item>
        <item>ریه</item>
        <item> قلب و عروق</item>
        <item> داخلی</item>
        <item> چشم</item>
        <item> پوست</item>
        <item>ارتوپدي</item>
        <item>دندانپزشکی</item>
        <item>سایر</item>
    </string-array>
    
    
     <string name="doctor_info">اطلاعات مرکز درمانی</string>
     <string name="clinic_list">لیست مراکز درمانی</string>
     <string name="Comments_View">مشاهده نظرات</string>
    
     <string name="add_comment">افزودن نظر</string>
    
     <string name="commenter_name">نام نظر دهنده</string>
    
     <string name="comment_text">متن نظر</string>
    
     <string name="speciality">تخصص</string>
    
     <string name="clinic_phone">تلفن</string>
    
     <string name="add_profile">انتخاب تصویر پروفایل</string>

</resources>