<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    
    
    <item android:id="@+id/action_home_list_view"
          android:title="@string/home"
          android:icon="@drawable/home_icon"
          android:showAsAction="ifRoom"
    />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item 
        android:id="@+id/clinicMapView"
        android:icon="@drawable/ic_action_map" 
        android:title="@string/show_on_map" 
        android:enabled="true"
        android:showAsAction="always" 
        android:visible="true"></item>
    <item android:id="@+id/addClinicButton" 
        android:title="@string/add_clinic_activity"
        android:icon="@drawable/ic_action_new_label"  
        android:enabled="true"
        android:showAsAction="always" 
        android:visible="true"></item>
    
    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_action_search"
          android:showAsAction="ifRoom|collapseActionView"
          android:actionViewClass="android.widget.SearchView" />
    
    <item android:id="@+id/action_sort"
          android:title="@string/sort"
          android:icon="@drawable/sort"
          android:showAsAction="always" 
          android:visible="true"/>
    
    
    
    <item android:id="@+id/action_refresh_list"
          android:title="@string/action_refresh"
          android:icon="@drawable/ic_action_refresh"
          android:showAsAction="ifRoom"
    />
    
    

</menu>