<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item 
        android:id="@+id/searchFilterButton"
        android:icon="@drawable/filter" 
        android:title="@string/show_as_list" 
        android:enabled="true"
        android:showAsAction="always" 
        
        android:visible="true"></item>
    <item 
        android:id="@+id/clinicListView"
        android:icon="@drawable/ic_action_view_as_list" 
        android:title="@string/show_as_list" 
        android:enabled="true"
        android:showAsAction="always" 
        android:visible="true"></item>
    <item android:id="@+id/addClinicButton" 
        android:title="@string/add_clinic_activity"
        android:icon="@drawable/ic_action_new_label"  
        android:enabled="true"
        android:showAsAction="always" 
        android:visible="true"></item>
    
    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_action_search"
          android:showAsAction="ifRoom|collapseActionView"
          android:actionViewClass="android.widget.SearchView" />
    
    

</menu>