<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="right" >

    <ImageView
        android:id="@+id/doctor_list_view_profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/doctor_list_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="16dp"
        android:layout_toLeftOf="@+id/doctor_list_view_profile_pic"
        android:padding="5dp"
        android:text="@string/clinic_name"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/doctor_list_view_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/doctor_list_view_name"
        android:layout_below="@+id/doctor_list_view_rating"
        android:text="@string/address"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RatingBar
        android:id="@+id/doctor_list_view_rating"
        style="@style/appleRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/doctor_list_view_name"
        android:layout_below="@+id/doctor_list_view_name"
        android:isIndicator="true"
        android:minHeight="32dp" />

    <TextView
        android:id="@+id/doctor_list_view_speciality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/doctor_list_view_address"
        android:layout_below="@+id/doctor_list_view_address"
        android:padding="5dp"
        android:text="@string/clinic_speciality"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:textStyle="bold" />

</RelativeLayout>