<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg">

        <TextView
            android:id="@+id/doctor_name"
            android:layout_width="138dp"
            android:layout_height="40dp"
            android:layout_marginLeft="85dp"
            android:layout_marginRight="10dp"
            android:text="@string/clinic_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/appleRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/doctor_name"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="35dp" />

        <Button
            android:id="@+id/cmntBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="100dp"
            android:text="@string/Comments_View" />

        <QuickContactBadge
            android:id="@+id/imgContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

        <TextView
            android:id="@+id/docSpeciality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="80dp"
            android:layout_marginTop="70dp"
            android:text="@string/speciality"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="138dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <ImageView
            android:id="@+id/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_action_call" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/call"
            android:layout_marginRight="14dp"
            android:layout_toLeftOf="@+id/call"
            android:text="@string/clinic_phone" />

        <TextView
            android:id="@+id/days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/address"
            android:layout_alignRight="@+id/waiting_time"
            android:layout_alignTop="@+id/address"
            android:text="days" />

        <ImageView
            android:id="@+id/waiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/phone"
            android:src="@drawable/waiting_room" />

        <TextView
            android:id="@+id/waiting_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/waiting"
            android:layout_marginRight="28dp"
            android:layout_toLeftOf="@+id/waiting"
            android:text="times" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/phone"
            android:layout_centerVertical="true"
            android:text="@string/address" />

        <ImageView
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/call"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_action_forward" />

        <ImageView
            android:id="@+id/clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/phone"
            android:src="@drawable/ic_action_time" />

        <TextView
            android:id="@+id/operating_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/clock"
            android:layout_toLeftOf="@+id/clock" />

    </RelativeLayout>

</LinearLayout>